--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gitの勉強</title>
 </head>
 <body>
-    <h1>gh-pagesブランチは、GitHub Pagesに自動で公開されます</h1>
-    <p>この変更はadd-index-pegeブランチで追加されました。</p>
+    <h1>Gitのブランチを勉強しています。</h1>
 </body>
 </html>
